- Optimized the CMakeLists.txt - Added awuiButton, awuiComponent and awuiControl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ endif(NOT OPENGL_FOUND)
 
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
-SUBDIRS( src test )
+ADD_SUBDIRECTORY( src )
+ADD_SUBDIRECTORY( test )
