--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,10 +5,10 @@ PROJECT( libawui )
 #INCLUDE_DIRECTORIES( ../../libaw/debug/x11/include/ )
 INCLUDE_DIRECTORIES( ../../libaw/debug/nt/include/ )
 
-FILE(GLOB AWUI_FILES awui/*.cpp)
+FILE(GLOB AWUI_SOURCES awui/*.cpp)
+FILE(GLOB AWUI_HEADERS awui/*.h)
 
-ADD_LIBRARY(awui STATIC ${AWUI_FILES})
+SOURCE_GROUP("Source" FILES ${AWUI_SOURCES})
+SOURCE_GROUP("Headers" FILES ${AWUI_HEADERS})
 
-TARGET_LINK_LIBRARIES(
-	awui
-)
+ADD_LIBRARY(awui STATIC ${AWUI_SOURCES} ${AWUI_HEADERS})
