- Compiling libaw with CMake - Renaming the directory src to libawui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ endif(NOT OPENGL_FOUND)
 
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
+ADD_SUBDIRECTORY( libaw )
 ADD_SUBDIRECTORY( src )
 ADD_SUBDIRECTORY( test )
