--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -2,8 +2,7 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 PROJECT( libawui )
 
-#INCLUDE_DIRECTORIES( ../../libaw/debug/x11/include/ )
-INCLUDE_DIRECTORIES( ../../libaw/debug/nt/include/ )
+INCLUDE_DIRECTORIES( ../libaw/ )
 
 FILE(GLOB AWUI_SOURCES awui/*.cpp)
 FILE(GLOB AWUI_HEADERS awui/*.h)
@@ -11,4 +10,4 @@ FILE(GLOB AWUI_HEADERS awui/*.h)
 SOURCE_GROUP("Source" FILES ${AWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${AWUI_HEADERS})
 
-ADD_LIBRARY(awui STATIC ${AWUI_SOURCES} ${AWUI_HEADERS})
+ADD_LIBRARY(libawui STATIC ${AWUI_SOURCES} ${AWUI_HEADERS})
