--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,8 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 PROJECT( awuiDemo )
 
 INCLUDE_DIRECTORIES(
-	../src/
-#	../../libaw/debug/x11/include/
-	../../libaw/debug/nt/include/
+	../libaw/
+	../libawui/
 )
 
 FILE(GLOB AWUIDEMO_SOURCES *.cpp)
@@ -19,7 +18,6 @@ ADD_EXECUTABLE(awuiDemo	${AWUIDEMO_SOURCES}	${AWUIDEMO_HEADERS})
 TARGET_LINK_LIBRARIES(
 	awuiDemo
 	${OPENGL_LIBRARIES}
-#	../../libaw/release/x11/libaw.a
-	../../libaw/debug/nt/aw
-	awui
+	libaw
+	libawui
 )
