- Compiling libaw with Visual Studio using CMake

--- a/libaw/CMakeLists.txt
+++ b/libaw/CMakeLists.txt
@@ -2,10 +2,15 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 PROJECT( libaw )
 
-FILE(GLOB *.c)
-FILE(GLOB AWUI_HEADERS awui/*.h)
+FILE(GLOB LIBAW_SOURCES *.c)
+FILE(GLOB LIBAW_HEADERS *.h)
 
-SOURCE_GROUP("Source" FILES ${AWUI_SOURCES})
-SOURCE_GROUP("Headers" FILES ${AWUI_HEADERS})
+SOURCE_GROUP("Source" FILES ${LIBAW_SOURCES})
+SOURCE_GROUP("Headers" FILES ${LIBAW_HEADERS})
 
-ADD_LIBRARY(libaw STATIC ${AWUI_SOURCES} ${AWUI_HEADERS})
+ADD_LIBRARY(libaw STATIC ${LIBAW_SOURCES} ${LIBAW_HEADERS})
+
+TARGET_LINK_LIBRARIES(
+	libaw
+	${OPENGL_LIBRARIES}
+)
