--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ endif(NOT OPENGL_FOUND)
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
 ADD_SUBDIRECTORY( libaw )
-ADD_SUBDIRECTORY( src )
+ADD_SUBDIRECTORY( libawui )
 ADD_SUBDIRECTORY( test )
