--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -4,10 +4,15 @@ PROJECT( libawui )
 
 INCLUDE_DIRECTORIES( ../libaw/ )
 
-FILE(GLOB AWUI_SOURCES awui/*.cpp)
-FILE(GLOB AWUI_HEADERS awui/*.h)
+FILE(GLOB LIBAWUI_SOURCES awui/*.cpp)
+FILE(GLOB LIBAWUI_HEADERS awui/*.h)
 
-SOURCE_GROUP("Source" FILES ${AWUI_SOURCES})
-SOURCE_GROUP("Headers" FILES ${AWUI_HEADERS})
+SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
+SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
 
-ADD_LIBRARY(libawui STATIC ${AWUI_SOURCES} ${AWUI_HEADERS})
+ADD_LIBRARY(libawui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
+
+TARGET_LINK_LIBRARIES(
+	libawui
+	libaw
+)
