- Removing OPENGL in CMakeLists.txt of libaw

--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -2,7 +2,9 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 PROJECT( libawui )
 
-INCLUDE_DIRECTORIES( ../libaw/ )
+INCLUDE_DIRECTORIES(
+	../libaw/
+)
 
 FILE(GLOB LIBAWUI_SOURCES awui/*.cpp)
 FILE(GLOB LIBAWUI_HEADERS awui/*.h)
