Compile in linux

--- a/libaw/CMakeLists.txt
+++ b/libaw/CMakeLists.txt
@@ -8,4 +8,4 @@ FILE(GLOB LIBAW_HEADERS *.h)
 SOURCE_GROUP("Source" FILES ${LIBAW_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAW_HEADERS})
 
-ADD_LIBRARY(libaw STATIC ${LIBAW_SOURCES} ${LIBAW_HEADERS})
+ADD_LIBRARY(aw STATIC ${LIBAW_SOURCES} ${LIBAW_HEADERS})
