--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -12,9 +12,9 @@ FILE(GLOB LIBAWUI_HEADERS awui/*.h)
 SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
 
-ADD_LIBRARY(libawui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
+ADD_LIBRARY(awui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
 
 TARGET_LINK_LIBRARIES(
-	libawui
-	libaw
+	awui
+	aw
 )
