- Test with Cairo using linux

--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -4,6 +4,11 @@ PROJECT( libawui )
 
 INCLUDE_DIRECTORIES(
 	../libaw/
+	/usr/include/cairomm-1.0/
+	/usr/include/sigc++-2.0/
+	/usr/lib/sigc++-2.0/include/
+	/usr/include/cairo/
+	/usr/include/freetype2/
 )
 
 FILE(GLOB LIBAWUI_SOURCES awui/*.cpp)
@@ -17,4 +22,5 @@ ADD_LIBRARY(awui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
 TARGET_LINK_LIBRARIES(
 	awui
 	aw
+	/usr/lib/libcairomm-1.0.so
 )
