- Created Image, Bitmap and Graphics to use with cairo

--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -4,11 +4,8 @@ PROJECT( libawui )
 
 INCLUDE_DIRECTORIES(
 	../libaw/
-	/usr/include/cairomm-1.0/
-	/usr/include/sigc++-2.0/
-	/usr/lib/sigc++-2.0/include/
-	/usr/include/cairo/
-	/usr/include/freetype2/
+#	/usr/include/cairo/
+	"C:\\Archivos de programa\\Archivos comunes\\GTK\\2.0\\include\\cairo\\"
 )
 
 FILE(GLOB LIBAWUI_SOURCES awui/*.cpp)
@@ -22,5 +19,6 @@ ADD_LIBRARY(awui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
 TARGET_LINK_LIBRARIES(
 	awui
 	aw
-	/usr/lib/libcairomm-1.0.so
+#	/usr/lib/libcairomm-1.0.so
+	"C:\\Archivos de programa\\Archivos comunes\\GTK\\2.0\\lib\\libcairo.dll.a"
 )
