--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,14 @@ endif(NOT OPENGL_FOUND)
 
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
+FIND_PACKAGE(Freetype REQUIRED)
+if(NOT FREETYPE_FOUND)
+	message("ERROR: FreeType not found")
+endif(NOT FREETYPE_FOUND)
+
+MESSAGE(STATUS "FreeType: ${FREETYPE_LIBRARIES}")
+
+
 ADD_SUBDIRECTORY( libaw )
 ADD_SUBDIRECTORY( libawui )
 ADD_SUBDIRECTORY( test )
