Preparando para que compile en linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(X11)
+
 if(NOT OPENGL_FOUND)
 	message("ERROR: OpenGL not found")
 endif(NOT OPENGL_FOUND)
