--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -8,8 +8,8 @@ INCLUDE_DIRECTORIES(
 #	"C:\\awui-project\\cairo\\include\\cairo\\"
 )
 
-FILE(GLOB LIBAWUI_SOURCES awui/*.cpp)
-FILE(GLOB LIBAWUI_HEADERS awui/*.h)
+FILE(GLOB LIBAWUI_SOURCES awui/*.cpp awui/animation/*.cpp)
+FILE(GLOB LIBAWUI_HEADERS awui/*.h awui/animation/*.h)
 
 SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
