--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,12 @@ endif(NOT OPENGL_FOUND)
 
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
-FIND_PACKAGE(Freetype REQUIRED)
-if(NOT FREETYPE_FOUND)
-	message("ERROR: FreeType not found")
-endif(NOT FREETYPE_FOUND)
+#FIND_PACKAGE(Freetype)
+#if(NOT FREETYPE_FOUND)
+#	message("ERROR: FreeType not found")
+#endif(NOT FREETYPE_FOUND)
 
-MESSAGE(STATUS "FreeType: ${FREETYPE_LIBRARIES}")
-
+#MESSAGE(STATUS "FreeType: ${FREETYPE_LIBRARIES}")
 
 ADD_SUBDIRECTORY( libaw )
 ADD_SUBDIRECTORY( libawui )
