--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -2,6 +2,10 @@ CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 PROJECT( libawui )
 
+if(UNIX)
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+endif()
+
 INCLUDE_DIRECTORIES(
 	../libaw/
 	/usr/include/cairo/
