Cambiando aw por SDL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
+FIND_PACKAGE(SDL REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(X11)
 
@@ -9,6 +10,5 @@ endif(NOT OPENGL_FOUND)
 
 MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
 
-ADD_SUBDIRECTORY( libaw )
 ADD_SUBDIRECTORY( libawui )
 ADD_SUBDIRECTORY( test )
