Mejorado el tema de dibujado de textos, colores, alineamiento de textos...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
 
 FIND_PACKAGE(SDL REQUIRED)
+FIND_PACKAGE(SDL_ttf REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(X11)
 
