--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -20,7 +20,8 @@ FILE(GLOB_RECURSE LIBAWUI_HEADERS awui/*.h )
 SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
 
-ADD_LIBRARY(awui STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
+ADD_LIBRARY(awui SHARED ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
+ADD_LIBRARY(awui_static STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
 
 TARGET_LINK_LIBRARIES(
 	awui
