--- a/.hgignore
+++ b/.hgignore
@@ -6,7 +6,7 @@ CMakeCache.txt
 libaw/libaw.a
 libawui/libawui.so
 libawui/libawui_static.a
-samples/test/awuiDemo
+samples/awuiDemo/awuiDemo
 
 Project.layout
 
