--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,5 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
+PROJECT(samples)
+
 ADD_SUBDIRECTORY(awArcade)
 ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awChip8)
