Preparando el widget de ejemplo para master system

--- a/.hgignore
+++ b/.hgignore
@@ -8,6 +8,7 @@ libawui/libawui.so
 libawui/libawui_static.a
 samples/awuiDemo/awuiDemo
 samples/awChip8/awChip8
+samples/awMasterGear/awMasterGear
 
 syntax: glob
 */Debug/*
