--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,4 +5,4 @@ PROJECT(samples)
 ADD_SUBDIRECTORY(awArcade)
 ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awChip8)
-
+ADD_SUBDIRECTORY(awMasterGear)
