--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
-
 PROJECT(awui)
+
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
+
+SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")
 
 ADD_SUBDIRECTORY(libawui)
