--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -7,3 +7,5 @@ ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awChip8)
 ADD_SUBDIRECTORY(awSlider)
 ADD_SUBDIRECTORY(awMasterGear)
+ADD_SUBDIRECTORY(awSpectrum)
+
