--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,5 +5,5 @@ PROJECT(samples)
 ADD_SUBDIRECTORY(awArcade)
 ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awSlider)
-ADD_SUBDIRECTORY(awSpectrum)
+ADD_SUBDIRECTORY(awTest)
 
