--- a/samples/awTest/CMakeLists.txt
+++ b/samples/awTest/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
 FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")
 
-PROJECT(awArcade)
+PROJECT(awTest)
 
 if(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
@@ -13,16 +13,16 @@ INCLUDE_DIRECTORIES(
 	${LIBAWUI_INCLUDE_DIRS}
 )
 
-FILE(GLOB AWARCADE_SOURCES *.cpp)
-FILE(GLOB AWARCADE_HEADERS *.h)
+FILE(GLOB AWTEST_SOURCES *.cpp)
+FILE(GLOB AWTEST_HEADERS *.h)
 
-SOURCE_GROUP("Source" FILES ${AWARCADE_SOURCES})
-SOURCE_GROUP("Headers" FILES ${AWARCADE_HEADERS})
+SOURCE_GROUP("Source" FILES ${AWTEST_SOURCES})
+SOURCE_GROUP("Headers" FILES ${AWTEST_HEADERS})
 
-ADD_EXECUTABLE(awArcade ${AWARCADE_SOURCES} ${AWARCADE_HEADERS})
+ADD_EXECUTABLE(awTest ${AWTEST_SOURCES} ${AWTEST_HEADERS})
 
 TARGET_LINK_LIBRARIES(
-	awArcade
+	awTest
 	${LIBAWUI_LIBRARIES}
 #	Imm32
 )
