--- a/samples/awTIS100/CMakeLists.txt
+++ b/samples/awTIS100/CMakeLists.txt
@@ -1,9 +1,9 @@
+PROJECT(awTIS100)
+
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
 FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")
-
-PROJECT(awTIS100)
 
 if(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
@@ -24,5 +24,5 @@ ADD_EXECUTABLE(awTIS100 ${AWTIS100_SOURCES} ${AWTIS100_HEADERS})
 TARGET_LINK_LIBRARIES(
 	awTIS100
 	${LIBAWUI_LIBRARIES}
-#	Imm32
+	SDL2_image
 )
