Paquete para debian

--- a/samples/awArcade/CMakeLists.txt
+++ b/samples/awArcade/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT(awArcade)
+PROJECT(stationTV)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
@@ -13,16 +13,16 @@ INCLUDE_DIRECTORIES(
 	${LIBAWUI_INCLUDE_DIRS}
 )
 
-FILE(GLOB AWARCADE_SOURCES *.cpp)
-FILE(GLOB AWARCADE_HEADERS *.h)
+FILE(GLOB STATIONTV_SOURCES *.cpp)
+FILE(GLOB STATIONTV_HEADERS *.h)
 
-SOURCE_GROUP("Source" FILES ${AWARCADE_SOURCES})
-SOURCE_GROUP("Headers" FILES ${AWARCADE_HEADERS})
+SOURCE_GROUP("Source" FILES ${STATIONTV_SOURCES})
+SOURCE_GROUP("Headers" FILES ${STATIONTV_HEADERS})
 
-ADD_EXECUTABLE(awArcade ${AWARCADE_SOURCES} ${AWARCADE_HEADERS})
+ADD_EXECUTABLE(stationTV ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
 
 TARGET_LINK_LIBRARIES(
-	awArcade
+	stationTV
 	${LIBAWUI_LIBRARIES}
 	SDL2_image
 )
