Renombrando awArcade a stationTV

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 PROJECT(samples)
 
-ADD_SUBDIRECTORY(awArcade)
+ADD_SUBDIRECTORY(stationTV)
 ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awSlider)
 ADD_SUBDIRECTORY(awTest)
