Experimentos con shaders

--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -4,23 +4,35 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 INCLUDE(FindPkgConfig)
 
+FIND_PACKAGE(GLEW REQUIRED)
+IF(NOT GLEW_FOUND)
+        MESSAGE("ERROR: GLEW not found")
+ENDIF()
+MESSAGE(STATUS "GLEW_INCLUDE_DIRS: ${GLEW_INCLUDE_DIRS}")
+MESSAGE(STATUS "GLEW_LIBRARIES: ${GLEW_LIBRARIES}")
+
 FIND_PACKAGE(OpenGL REQUIRED)
-if(NOT OPENGL_FOUND)
-	message("ERROR: OpenGL not found")
-endif(NOT OPENGL_FOUND)
-MESSAGE(STATUS "OpenGL: ${OPENGL_LIBRARIES}")
+IF(NOT OPENGL_FOUND)
+	MESSAGE("ERROR: OpenGL not found")
+ENDIF()
+MESSAGE(STATUS "OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
+MESSAGE(STATUS "OPENGL_LIBRARIES: ${OPENGL_LIBRARIES}")
+MESSAGE(STATUS "OPENGL_gl_LIBRARY: ${OPENGL_gl_LIBRARY}")
 
 PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
+MESSAGE(STATUS "SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")
+MESSAGE(STATUS "SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
 
-if(UNIX)
+IF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
-endif()
+ENDIF()
 
 INCLUDE_DIRECTORIES(
 	/usr/include/cairo/
 	.
 	${OPENGL_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIRS}
+	${GLEW_INCLUDE_DIRS}
 )
 
 FILE(GLOB_RECURSE LIBAWUI_SOURCES awui/*.cpp )
@@ -30,11 +42,14 @@ SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
 
 ADD_LIBRARY(awui SHARED ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
-ADD_LIBRARY(awui_static STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
+#ADD_LIBRARY(awui_static STATIC ${LIBAWUI_SOURCES} ${LIBAWUI_HEADERS})
 
 TARGET_LINK_LIBRARIES(
 	awui
 	cairo
+	${OPENGL_gl_LIBRARY}
 	${SDL2_LIBRARIES}
-	GL
+	SDL2_image
+	${GLEW_LIBRARIES}
 )
+
