--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -5,9 +5,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "./libawui" DOC "awui library")
 FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "./libawui" DOC "awui includes")
 
-if(UNIX)
+IF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
-endif()
+ENDIF()
 
 INCLUDE_DIRECTORIES(
 	${LIBAWUI_INCLUDE_DIRS}
@@ -24,5 +24,5 @@ ADD_EXECUTABLE(stationTV ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
 TARGET_LINK_LIBRARIES(
 	stationTV
 	${LIBAWUI_LIBRARIES}
-	SDL2_image
 )
+
