--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -19,9 +19,17 @@ MESSAGE(STATUS "OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
 MESSAGE(STATUS "OPENGL_LIBRARIES: ${OPENGL_LIBRARIES}")
 MESSAGE(STATUS "OPENGL_gl_LIBRARY: ${OPENGL_gl_LIBRARY}")
 
-PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
-MESSAGE(STATUS "SDL2_INCLUDE_DIRS: ${SDL2_INCLUDE_DIRS}")
-MESSAGE(STATUS "SDL2_LIBRARIES: ${SDL2_LIBRARIES}")
+FIND_PACKAGE(SDL REQUIRED)
+if(NOT SDL_FOUND)
+	message("ERROR: SDL not found")
+endif(NOT SDL_FOUND)
+MESSAGE(STATUS "SDL: ${SDL_LIBRARY}")
+
+FIND_PACKAGE(SDL_image REQUIRED)
+if(NOT SDLIMAGE_FOUND)
+	message("ERROR: SDL_image not found")
+endif(NOT SDLIMAGE_FOUND)
+MESSAGE(STATUS "SDL_image: ${SDLIMAGE_LIBRARY}")
 
 IF(UNIX)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
@@ -31,7 +39,7 @@ INCLUDE_DIRECTORIES(
 	/usr/include/cairo/
 	.
 	${OPENGL_INCLUDE_DIR}
-	${SDL2_INCLUDE_DIRS}
+	${SDL_INCLUDE_DIR}
 	${GLEW_INCLUDE_DIRS}
 )
 
@@ -48,7 +56,8 @@ TARGET_LINK_LIBRARIES(
 	awui
 	cairo
 	${OPENGL_gl_LIBRARY}
-	${SDL2_LIBRARIES}
+	${SDL_LIBRARY}
+	${SDLIMAGE_LIBRARY}
 	SDL2_image
 	${GLEW_LIBRARIES}
 )
