Preparando el sistema para usarlo con Eclipse Oxygen

--- a/.hgignore
+++ b/.hgignore
@@ -1,40 +1,23 @@
-CMakeFiles/
+.ninja_deps
+.ninja_log
+build.ninja
+rules.ninja
+
 Makefile
-cmake_install.cmake
+
 CMakeCache.txt
-libaw/libaw.a
+CMakeFiles/
+cmake_install.cmake
+
+\.cproject
+\.project
+
 libawui/libawui.so
-libawui/libawui_static.a
-samples/stationTV/stationTV
-samples/stationTV/ubuntu/StationTV/usr/local/bin/stationTV
 samples/awSlider/awSlider
 samples/awTest/awTest
 samples/awuiDemo/awuiDemo
-build/
-roms/
+samples/stationTV/roms/
+samples/stationTV/stationTV
 
 syntax: glob
-callgrind.out.*
-*/Debug/*
-*.layout
-*.deb
-*.vcproj
-*.sln
-*.ncb
-*.cbp
-*.suo
-*.vcproj.*user
-*.workspace
-*.sms
-*.sg
-*.rar
-*.kdev*
-*.rom
-*.tap
-*.TAP
-*.zip
-*.state*
-libaw/*.c
-libaw/*.h
-libaw/aw/*.h
 
