--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -2,6 +2,12 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 PROJECT(samples)
 
+IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	SET(LIBAWUI_BIN_PATH "../../b/libawui/d")
+ELSE()
+	SET(LIBAWUI_BIN_PATH "../../b/libawui/r")
+ENDIF()
+
 ADD_SUBDIRECTORY(stationTV)
 ADD_SUBDIRECTORY(awuiDemo)
 ADD_SUBDIRECTORY(awSlider)
