--- a/.hgignore
+++ b/.hgignore
@@ -12,8 +12,8 @@ cmake_install.cmake
 \.cproject
 \.project
 
-b/libawui/d/libawui.so
-b/libawui/r/libawui.so
+b/d/libawui/libawui.so
+b/r/libawui/libawui.so
 samples/awSlider/awSlider
 samples/awTest/awTest
 samples/awuiDemo/awuiDemo
