--- a/build
+++ b/build
@@ -72,7 +72,7 @@ case "$OPTION" in
 		echo
 		echo "basic commands:"
 		echo
-		echo " build         build projects (efault)"
+		echo " build         build projects (default)"
 		echo " clean         clean projects"
 		echo " countlines    count all project lines"
 		echo " help          display this help and exit"
