--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -4,39 +4,67 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
 INCLUDE(FindPkgConfig)
 
+MESSAGE(STATUS "PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")
+
+#IF (WIN32)
+#	LIST(APPEND CMAKE_PREFIX_PATH "../ext/glew")
+#	FIND_PATH(GLEW_INCLUDE_DIRS GL/glew.h)
+#	FIND_PATH(GLEW_LIBRARIES lib/Release/x64/glew32.lib)
+#	SET(GLEW_LIBRARIES ${GLEW_LIBRARIES}/lib/Release/x64/glew32.lib)
+
+	#	INCLUDE_DIRECTORIES(ext/glew/include)
+#	LINK_LIBRARIES(ext/glew/lib/Release/x64)
+#	SET(GLEW_INCLUDE_DIRS ${GLEW_INCLUDE_DIR})
+#	MESSAGE(STATUS "GLEW_INCLUDE_DIR: ${GLEW_INCLUDE_DIR}")
+#ELSE (WIN32)
 FIND_PACKAGE(GLEW REQUIRED)
-IF(NOT GLEW_FOUND)
-        MESSAGE("ERROR: GLEW not found")
-ENDIF()
+IF (NOT GLEW_FOUND)
+	MESSAGE("ERROR: GLEW not found")
+ENDIF ()
+#ENDIF (WIN32)
+
+# GLEW_INCLUDE_DIRS: /usr/include
+# GLEW_INCLUDE_DIRS: C:/Users/BorSanZa/Desktop/Awui/awui/ext/glew/include
 MESSAGE(STATUS "GLEW_INCLUDE_DIRS: ${GLEW_INCLUDE_DIRS}")
+# GLEW_LIBRARIES: /usr/lib/x86_64-linux-gnu/libGLEW.so
+# GLEW_LIBRARIES: C:/Users/BorSanZa/Desktop/Awui/awui/ext/glew/lib/Release/x64/glew32.lib
 MESSAGE(STATUS "GLEW_LIBRARIES: ${GLEW_LIBRARIES}")
 
 FIND_PACKAGE(OpenGL REQUIRED)
-IF(NOT OPENGL_FOUND)
+IF (NOT OPENGL_FOUND)
 	MESSAGE("ERROR: OpenGL not found")
-ENDIF()
+ENDIF ()
 MESSAGE(STATUS "OPENGL_INCLUDE_DIR: ${OPENGL_INCLUDE_DIR}")
-MESSAGE(STATUS "OPENGL_LIBRARIES: ${OPENGL_LIBRARIES}")
 MESSAGE(STATUS "OPENGL_gl_LIBRARY: ${OPENGL_gl_LIBRARY}")
 
 FIND_PACKAGE(SDL REQUIRED)
-if(NOT SDL_FOUND)
-	message("ERROR: SDL not found")
-endif(NOT SDL_FOUND)
+IF (NOT SDL_FOUND)
+	MESSAGE("ERROR: SDL not found")
+ENDIF ()
 MESSAGE(STATUS "SDL: ${SDL_LIBRARY}")
 
+#IF (WIN32)
+#	LIST(APPEND CMAKE_PREFIX_PATH "../ext/SDL_image")
+#	FIND_PATH(SDLIMAGE_LIBRARY lib/x64/SDL_image.lib)
+#	SET(SDLIMAGE_LIBRARY ${SDLIMAGE_LIBRARY}/lib/x64/SDL_image.lib)
+#ELSE (WIN32)
 FIND_PACKAGE(SDL_image REQUIRED)
-if(NOT SDLIMAGE_FOUND)
-	message("ERROR: SDL_image not found")
-endif(NOT SDLIMAGE_FOUND)
-MESSAGE(STATUS "SDL_image: ${SDLIMAGE_LIBRARY}")
+IF (NOT SDLIMAGE_FOUND)
+	MESSAGE("ERROR: SDL_image not found")
+ENDIF ()
+#ENDIF (WIN32)
+# /usr/lib/x86_64-linux-gnu/libSDL_image.so
+# C:/Users/BorSanZa/Desktop/Awui/awui/ext/SDL_image/lib/x64/SDL_image.lib
+MESSAGE(STATUS "SDLIMAGE_LIBRARY: ${SDLIMAGE_LIBRARY}")
 
-IF(UNIX)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
-ENDIF()
+#IF (UNIX)
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+#ENDIF ()
 
 INCLUDE_DIRECTORIES(
 	/usr/include/cairo/
+	C:/msys64/mingw64/include/cairo/
+	C:/msys64/mingw64/x86_64-w64-mingw32/include/
 	.
 	${OPENGL_INCLUDE_DIR}
 	${SDL_INCLUDE_DIR}
@@ -60,4 +88,3 @@ TARGET_LINK_LIBRARIES(
 	${SDLIMAGE_LIBRARY}
 	${GLEW_LIBRARIES}
 )
-
