--- a/.hgignore
+++ b/.hgignore
@@ -17,6 +17,8 @@ b/d/libawui/libawui.so
 b/r/libawui/libawui.so
 b/r/libawui/libawui.dll
 b/r/libawui/libawui.dll.a
+b/d/libawui/libawui.dll
+b/d/libawui/libawui.dll.a
 samples/awSlider/awSlider
 samples/awTest/awTest
 samples/awuiDemo/awuiDemo
