--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -5,9 +5,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
 FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")
 
-IF(UNIX)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
-ENDIF()
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
 
 INCLUDE_DIRECTORIES(
 	${LIBAWUI_INCLUDE_DIRS}
@@ -19,10 +17,13 @@ FILE(GLOB STATIONTV_HEADERS *.h)
 SOURCE_GROUP("Source" FILES ${STATIONTV_SOURCES})
 SOURCE_GROUP("Headers" FILES ${STATIONTV_HEADERS})
 
-ADD_EXECUTABLE(stationTV ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
+IF (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
+	ADD_EXECUTABLE(stationTV WIN32 ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
+ELSE ()
+	ADD_EXECUTABLE(stationTV ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
+ENDIF ()
 
 TARGET_LINK_LIBRARIES(
 	stationTV
 	${LIBAWUI_LIBRARIES}
 )
-
