--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -2,7 +2,7 @@ PROJECT(stationTV)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
 
-FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
+FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
 FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
@@ -27,3 +27,7 @@ TARGET_LINK_LIBRARIES(
 	stationTV
 	${LIBAWUI_LIBRARIES}
 )
+
+IF (WIN32)
+	CONFIGURE_FILE("${LIBAWUI_BIN_PATH}/libawui.dll" . COPYONLY)
+ENDIF ()
