Intento de incorporacion de la libreria de sonido de blargg para sms

--- a/libawui/CMakeLists.txt
+++ b/libawui/CMakeLists.txt
@@ -45,8 +45,8 @@ INCLUDE_DIRECTORIES(
 	${GLEW_INCLUDE_DIRS}
 )
 
-FILE(GLOB_RECURSE LIBAWUI_SOURCES awui/*.cpp )
-FILE(GLOB_RECURSE LIBAWUI_HEADERS awui/*.h )
+FILE(GLOB_RECURSE LIBAWUI_SOURCES awui/*.cpp  blargg/*.cpp)
+FILE(GLOB_RECURSE LIBAWUI_HEADERS awui/*.h blargg/*.h blargg/*.hpp)
 
 SOURCE_GROUP("Source" FILES ${LIBAWUI_SOURCES})
 SOURCE_GROUP("Headers" FILES ${LIBAWUI_HEADERS})
