Unificando libreria y samples en cmake

--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -25,9 +25,5 @@ ENDIF ()
 
 TARGET_LINK_LIBRARIES(
 	stationTV
-	${LIBAWUI_LIBRARIES}
+	awui
 )
-
-IF (WIN32)
-	CONFIGURE_FILE("${LIBAWUI_BIN_PATH}/libawui.dll" . COPYONLY)
-ENDIF ()
