--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -1,29 +1,30 @@
-PROJECT(stationTV)
+cmake_minimum_required(VERSION 3.10)
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
+project(stationTV CXX)
 
-FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
-FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")
+# Configuración estándar del proyecto
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+set(CMAKE_CXX_EXTENSIONS FALSE)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
+file(GLOB STATIONTV_SOURCES *.cpp)
 
-INCLUDE_DIRECTORIES(
-	${LIBAWUI_INCLUDE_DIRS}
+if(WIN32)
+	add_executable(stationTV WIN32)
+else()
+	add_executable(stationTV)
+endif()
+
+target_sources(stationTV PRIVATE
+	${STATIONTV_SOURCES}
 )
 
-FILE(GLOB STATIONTV_SOURCES *.cpp)
-FILE(GLOB STATIONTV_HEADERS *.h)
+target_link_libraries(stationTV PRIVATE awui)
 
-SOURCE_GROUP("Source" FILES ${STATIONTV_SOURCES})
-SOURCE_GROUP("Headers" FILES ${STATIONTV_HEADERS})
-
-IF (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
-	ADD_EXECUTABLE(stationTV WIN32 ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
-ELSE ()
-	ADD_EXECUTABLE(stationTV ${STATIONTV_SOURCES} ${STATIONTV_HEADERS})
-ENDIF ()
-
-TARGET_LINK_LIBRARIES(
-	stationTV
-	awui
-)
+if(WIN32)
+	add_custom_command(TARGET stationTV
+		POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			$<TARGET_FILE:awui>
+			$<TARGET_FILE_DIR:stationTV>)
+endif()
