--- a/samples/awTest/CMakeLists.txt
+++ b/samples/awTest/CMakeLists.txt
@@ -1,29 +1,30 @@
-PROJECT(awTest)
+cmake_minimum_required(VERSION 3.10)
 
-CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
+project(awTest CXX)
 
-FIND_LIBRARY(LIBAWUI_LIBRARIES NAMES libawui libawui.so PATHS "${LIBAWUI_BIN_PATH}" DOC "awui library")
-FIND_PATH(LIBAWUI_INCLUDE_DIRS awui/Object.h "../../libawui" DOC "awui includes")
+# Configuración estándar del proyecto
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+set(CMAKE_CXX_EXTENSIONS FALSE)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
-	
-INCLUDE_DIRECTORIES(
-	${LIBAWUI_INCLUDE_DIRS}
+file(GLOB AWTEST_SOURCES *.cpp)
+
+if(WIN32)
+	add_executable(awTest WIN32)
+else()
+	add_executable(awTest)
+endif()
+
+target_sources(awTest PRIVATE
+	${AWTEST_SOURCES}
 )
 
-FILE(GLOB AWTEST_SOURCES *.cpp)
-FILE(GLOB AWTEST_HEADERS *.h)
+target_link_libraries(awTest PRIVATE awui)
 
-SOURCE_GROUP("Source" FILES ${AWTEST_SOURCES})
-SOURCE_GROUP("Headers" FILES ${AWTEST_HEADERS})
-
-IF (WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
-	ADD_EXECUTABLE(awTest WIN32 ${AWTEST_SOURCES} ${AWTEST_HEADERS})
-ELSE ()
-	ADD_EXECUTABLE(awTest ${AWTEST_SOURCES} ${AWTEST_HEADERS})
-ENDIF ()
-
-TARGET_LINK_LIBRARIES(
-	awTest
-	awui
-)
+if(WIN32)
+	add_custom_command(TARGET awTest
+		POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_if_different
+			$<TARGET_FILE:awui>
+			$<TARGET_FILE_DIR:awTest>)
+endif()
