Poder ver la consola en modo debug

--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_EXTENSIONS FALSE)
 
 file(GLOB STATIONTV_SOURCES *.cpp)
 
-if(WIN32)
+if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
 	add_executable(stationTV WIN32)
 else()
 	add_executable(stationTV)
