--- a/samples/awSlider/CMakeLists.txt
+++ b/samples/awSlider/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_EXTENSIONS FALSE)
 
 file(GLOB AWSLIDER_SOURCES *.cpp)
 
-if(WIN32)
+if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
 	add_executable(awSlider WIN32)
 else()
 	add_executable(awSlider)
