--- a/samples/stationTV/CMakeLists.txt
+++ b/samples/stationTV/CMakeLists.txt
@@ -9,27 +9,30 @@ set(CMAKE_CXX_EXTENSIONS FALSE)
 
 file(GLOB STATIONTV_SOURCES *.cpp)
 
+add_executable(stationTV ${STATIONTV_SOURCES})
+
 if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
-	add_executable(stationTV WIN32)
-else()
-	add_executable(stationTV)
+    set_target_properties(stationTV PROPERTIES WIN32_EXECUTABLE TRUE)
 endif()
 
-target_sources(stationTV PRIVATE
-	${STATIONTV_SOURCES}
-)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if(MSVC)
+        target_compile_options(stationTV PRIVATE /Od /Zi)
+        target_link_options(stationTV PRIVATE /DEBUG)
+    else()
+        target_compile_options(stationTV PRIVATE -O0 -g)
+    endif()
+endif()
 
 target_link_libraries(stationTV PRIVATE awui)
 
 if(WIN32)
-	add_custom_command(TARGET stationTV
-		POST_BUILD
+	add_custom_command(TARGET stationTV POST_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy_if_different
 			$<TARGET_FILE:awui>
 			$<TARGET_FILE_DIR:stationTV>)
 
-	add_custom_command(TARGET stationTV
-		POST_BUILD
+	add_custom_command(TARGET stationTV POST_BUILD
 		COMMAND ${CMAKE_COMMAND} -E copy_directory
 			${DLLS_PATH}
 			$<TARGET_FILE_DIR:stationTV>)
